--- a/listings-setup.tex
+++ b/listings-setup.tex
@@ -1,10 +1,12 @@
 \usepackage{xcolor}
 \usepackage{fancyhdr}
 \usepackage{lastpage}
+\usepackage[margins=raggedright]{floatrow}
+\usepackage[italian]{babel}
 
 \pagestyle{fancy}
 \fancyhf{}
-\rhead{Aramis, Samuel}
+\rhead{Aramis}
 \lhead{SAMT}
 \cfoot{\thepage\ of \pageref{LastPage}}
 
